Pull request #1312: fix iframe in dark theme
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit 7e2fc1d89fcd9d069d5efc0b59816012b64d444f
Merge: 1ba45fbdc b472c1d1a
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Aug 8 12:33:46 2022 +0300

    merge

commit 1ba45fbdcdfdf375cebc9c8c9d8eb3ca3f5b7ea4
Merge: 09eda7c58 7a2cb4038
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Aug 8 12:04:03 2022 +0300

    merge

commit 09eda7c58500bcd56f5fe9979da19b9cecde4404
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Aug 1 22:05:40 2022 +0300

    AG-15655 fix iframe in dark theme

--- a/Extension/assets/css/alert-popup.css
+++ b/Extension/assets/css/alert-popup.css
@@ -15,6 +15,10 @@
  * along with Adguard Browser Extension. If not, see <http://www.gnu.org/licenses/>.
  */
 
+:root {
+    color-scheme: light;
+}
+
 .adguard-alert-iframe {
     width: 100%;
     border: none;
@@ -24,7 +28,6 @@
     left: 0;
     display: block;
     margin: 0 auto;
-    color-scheme: initial;
 }
 
 .adguard-popup-alert {
